--- a/src/views/404.html
+++ b/src/views/404.html
@@ -4,35 +4,8 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Error 404 - Página No Encontrada</title>
-      
-      <style>
-        body {
-          font-family: Arial, sans-serif;
-          background-color: #f2f2f2;
-          margin: 0;
-          padding: 0;
-        }
-        .container {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 100vh;
-          flex-direction: column;
-        }
-        .error-message {
-          text-align: center;
-          background-color: #fff;
-          padding: 20px;
-          border-radius: 5px;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-          margin-top: 20px;
-        }
-        .error-message a {
-          color: blue;
-          text-decoration: underline;
-          margin-top: 10px;
-        }
-      </style>
+      <link rel="stylesheet" href="css/style404.css">
+    
     </head>
     <body>
       <div class="container">
