--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FBI System</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sedan:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="css/styleHome.css" />
   </head>
   <body>
     <h1>&#128374; FBI System &#128374;</h1>
@@ -19,31 +25,19 @@
           <h5 class="card-title text-center">Ingrese sus credenciales</h5>
           <div class="row d-flex align-items-center mb-1">
             <div class="col-12">Email:</div>
-            <div class="col-7 m-auto"><input type="text" name="email" class="form-control" /></div>
+            <div class="col-7 m-auto">
+              <input type="text" name="email" class="form-control" />
+            </div>
           </div>
           <div class="row d-flex align-items-center">
             <div class="col-12">Password:</div>
-            <div class="col-7 m-auto"><input type="text" name="password" class="form-control" /></div>
+            <div class="col-7 m-auto">
+              <input type="text" name="password" class="form-control" />
+            </div>
           </div>
           <button class="btn bg-light my-3">Ingresar &#128373;</button>
         </form>
       </div>
     </div>
-
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-      }
-      body {
-        background: black;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        height: 60vh;
-      }
-    </style>
   </body>
 </html>
