--- a/src/assets/css/styleHome.css
+++ b/src/assets/css/styleHome.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background: black;
+  background: rgb(2, 45, 130);
   color: white;
   display: flex;
   align-items: center;
@@ -13,4 +13,8 @@ body {
   font-family: "Sedan", serif;
   font-weight: 400;
   font-style: normal;
+}
+
+#tile-page {
+  color: yellow;
 }
