creamos signInControl, exportamos a routes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
     <h1 id="tile-page">🚨 FBI System 🚨</h1>
     <div class="card bg-dark text-center">
       <div class="card-body">
-        <form action="/SignIn">
+        <form action="/signIn">
           <h1>🕵🏻</h1>
           <h5 class="card-title text-center">Ingrese sus credenciales</h5>
           <div class="row d-flex align-items-center mb-1">
@@ -35,7 +35,7 @@
               <input title="password" type="text" name="password" class="form-control" />
             </div>
           </div>
-          <button type="button" class="btn bg-light my-3">Ingresar &#128373;</button>
+          <button type="submit" class="btn bg-light my-3">Ingresar &#128373;</button>
         </form>
       </div>
     </div>
