css para dashboard. Update controllers & views

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,10 +32,11 @@
           <div class="row d-flex align-items-center">
             <div class="col-12">Password:</div>
             <div class="col-7 m-auto">
-              <input title="password" type="text" name="password" class="form-control" />
+              <input title="password" type="password" name="password" class="form-control" />
             </div>
           </div>
-          <button type="submit" class="btn bg-light my-3">Ingresar &#128373;</button>
+          <button type="submit" class="button-arounder mt-3">Ingresar &#128373;</button>
+          </div>
         </form>
       </div>
     </div>
