--- a/src/assets/css/styleDash.css
+++ b/src/assets/css/styleDash.css
@@ -8,13 +8,17 @@ body {
 }
 
 .dsh {
-    font-weight: 700;
-    font-size: 25px;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .logout {
-    text-decoration: none;
-    font-size: 15px;
-    font-weight: 700;
-    padding: 30px
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 700;
+  padding: 30px;
+}
+
+#emailUser {
+  font-weight: bold;
 }
